MCR-3060 OCFL metadata version pruning